--- a/banco-henrique-api/package.json
+++ b/banco-henrique-api/package.json
@@ -4,6 +4,8 @@
   "description": "Projeto para aprendizado de express com TS",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
+    "debug": "set DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
